--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "react-fetch-hook": "^1.9.5",
     "react-router-dom": "^6.4.2",
     "react-scripts": "5.0.1",
+    "recharts": "^2.1.14",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
